ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2009-01-20 Benedikt Heintel
	- LANGUAGES:
		* Updated: Hungarian
		* Updated: Russian
	
2009-01-12 Benedikt Heintel
	- DOCS:
		* Updated and moved README
	- SETUP:
		* Fixed #1605: Update VHCS2.4.7.1 to RC7 fails because of missing table

2009-01-11 Benedikt Heintel
	- ENGINE:
		* Fixed: MySQL database backups counted in quota

2009-01-06 Daniel Andreca
	- GUI:
		* Default user name for awstats is not inserted in order_add.php.
	- ENGINE:
		* Fixed #1601: Error in ispcp-dsk-quota

2009-01-06 Jochen Manz
	- CONFIGS:
		* Fixed #1600: Awstats configs for non-debian distros are out of sync (thanks to pgentoo)

2009-01-03 Benedikt Heintel
	- DOCS:
		* Updates INSTALL files
	- ENGINE:
		* Pop3 statistics with error
	- LANGUAGES:
		* Language Files updated

2009-01-02 Daniel Andreca
	- CONFIGS:
		* Fixed #1599: FreeBSD Fixes (thanks FEG)

2009-01-02 Benedikt Heintel
	- ENGINE:
		* Fixed #1597: Pop3 statistics with dovecot not created
	- GUI:
		* Fixed #1595: ftp user limit

2008-12-31 Daniel Andreca
	- GUI:
		* Fixed #1598: /reseller/domain-alias.php instead /reseller/alias.php in emailtpl-functions.php (thanks FEG)

2008-12-28 Daniel Andreca
	- CONFIGS:
		* Corrected fcgid configure file for Ubuntu
		* Introduced support for Ubuntu 8.10 - Interpid

2008-12-22 Daniel Andreca
	- GUI:
		* Fixed reseller update problems inconsistency between current_ftp_cnt and actual ftp count

2008-12-21 Daniel Andreca
	- GUI:
		* Small bug into template webtools.tpl

2008-12-20 Daniel Andreca
	- GUI:
		* Fixed #1591: Small bug into template - orderpanel - address.tpl
	- CONFIGS:
		* Getting ready for Debian 5.0 (lenny)

2008-12-17 Daniel Andreca
	- LANGUAGES:
		* Updated: Japanese
		* Allow aliases to share mount points (including with main domain)

2008-12-16 Daniel Andreca
	- ENGINE:
		* Fixed #1586: Alias Domains block proftpd restart

2008-12-15 Daniel Andreca
	- ENGINE: